Acrescentado mais traduções; Integrado endpoint de autenticação;

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,7 +1,7 @@
 {
   "landingNavbarFeatures": "Módulos",
   "landingNavbarAboutUs": "Sobre nós",
-  "landingNavbarPricing": "Valores",
+  "landingNavbarPricing": "Planos",
   "landingNavbarFeedback": "Feedback",
   "landingNavbarSignIn": "Minha Conta",
   "landingNavbarSignUp": "Criar Conta",
