Criado agenda desktop; criado tela de cadastro de paciente por fora do sistema; Criado listagem de pacientes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,22 +1,43 @@
 {
-  "landingNavbarFeatures": "Features",
-  "landingNavbarAboutUs": "About us",
-  "landingNavbarPricing": "Pricing",
-  "landingNavbarFeedback": "Feedback",
-  "landingNavbarSignIn": "My Account",
-  "landingNavbarSignUp": "Create Account",
-  "landingFirstScreenTitle": "Manage your entire clinic\nusing a single system",
-  "landingFirstScreenSubTitle": "Desde o financeiro, até a gestão de pessoas,\n da logistica até a agenda",
-  "landingSecondScreenTitle": "Todos os módulos disponíveis",
-  "landingSecondScreenSubTitle": "De acordo com o plano escolhido",
-  "landingSecondScreenFinanceTitle": "Tenha a sua gestão financeira",
-  "landingSecondScreenFinanceDescription": "O seu próprio fluxo de caixa, gerencie os honorários, pagamentos e receitas",
-  "landingSecondScreenHRTitle": "Gerencie seus profissionais",
-  "landingSecondScreenHRDescription": "Todas as informações dos seus funcionarios, em um só lugar",
-  "landingSecondScreen": "",
-  "landingFourthScreenTitle": "Escolha um plano que se adeque ao seu negócio",
-  "landingFourthScreenSubTitle": "Temos vários planos, para pequenas, médias e grandes clinicas",
-  "landingFourthBasicPlan": "Basic Plan",
-  "landingFourthMediumPlan": "Medium Plan",
-  "landingFourthPremiumPlan": "Premium Plan"
+  "@@locale": "en",
+  "email": "Email",
+  "fullName": "Full Name",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "street": "Street",
+  "number": "Number",
+  "complement": "Complement",
+  "district": "District",
+  "city": "City",
+  "state": "State",
+  "zipCode": "Zip Code",
+  "country": "Country",
+  "gender": "Gender",
+  "birthDate": "Birth Date",
+  "phoneNumber": "Phone Number",
+  "healthNumber": "Health Number",
+  "documentNumber": "NINo",
+  "documentNumberExpirationDate": "Document Number Expiration Date",
+  "occupation": "Occupation",
+  "isMandatory": "is mandatory",
+  "quantity": "{count, plural, =0 {None} =1 {One} other {More than one }}",
+  "validMustBeInformed": "valid must be informed",
+  "passwordDoesNotMatch": "Passwords do not match",
+  "male": "Male",
+  "female": "Female",
+  "otherGender": "Other",
+  "passwordLengthRule": "Password must have at least 8 characters length",
+  "passwordSpecialCharacterRule": "Password must have at least one special character",
+  "doNotHaveAccount": "Don't have an account?",
+  "signUp": "Sign Up",
+  "signIn": "Sign In",
+  "search": "Search",
+  "searchPatientHint": "Tip to search a patient by NINo, E-mail, Name or Phone Number",
+  "newPatient": "New",
+  "agenda": "Agenda",
+  "daily": "Daily",
+  "weakly": "Weakly",
+  "monthly": "Monthly",
+  "to": "to",
+  "filter": "Filter"
 }
