--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -1,22 +1,43 @@
 {
-  "landingNavbarFeatures": "Módulos",
-  "landingNavbarAboutUs": "Sobre nós",
-  "landingNavbarPricing": "Planos",
-  "landingNavbarFeedback": "Feedback",
-  "landingNavbarSignIn": "Minha Conta",
-  "landingNavbarSignUp": "Criar Conta",
-  "landingFirstScreenTitle": "Gerencie toda a sua clinica\nutilizando um único sistema",
-  "landingFirstScreenSubTitle": "Desde o financeiro, até a gestão de pessoas,\n da logistica até a agenda",
-  "landingSecondScreenTitle": "Todos os módulos disponíveis",
-  "landingSecondScreenSubTitle": "De acordo com o plano escolhido",
-  "landingSecondScreenFinanceTitle": "Tenha a sua gestão financeira",
-  "landingSecondScreenFinanceDescription": "O seu próprio fluxo de caixa, gerencie os honorários, pagamentos e receitas",
-  "landingSecondScreenHRTitle": "Gerencie seus profissionais",
-  "landingSecondScreenHRDescription": "Todas as informações dos seus funcionarios, em um só lugar",
-  "landingSecondScreen": "",
-  "landingFourthScreenTitle": "Escolha um plano que se adeque ao seu negócio",
-  "landingFourthScreenSubTitle": "Temos vários planos, para pequenas, médias e grandes clinicas",
-  "landingFourthBasicPlan": "Plano Básico",
-  "landingFourthMediumPlan": "Plano Médio",
-  "landingFourthPremiumPlan": "Plano Premium"
+  "@@locale": "pt_BR",
+  "email": "Email",
+  "fullName": "Nome Completo",
+  "password": "Senha",
+  "confirmPassword": "Confirmar Senha",
+  "street": "Rua",
+  "number": "Número",
+  "complement": "Complemento",
+  "district": "Bairro",
+  "city": "Cidade",
+  "state": "Estado",
+  "zipCode": "CEP",
+  "country": "País",
+  "gender": "Gênero",
+  "birthDate": "Data de Nascimento",
+  "phoneNumber": "Número de Celular",
+  "healthNumber": "Número do SUS",
+  "documentNumber": "CPF",
+  "documentNumberExpirationDate": "Data de Validade do NIF",
+  "occupation": "Ocupação",
+  "isMandatory": "é obrigatório",
+  "quantity": "{count, plural, =0 {Um } other {Mais de um }}",
+  "validMustBeInformed": "válido deve ser informado",
+  "passwordDoesNotMatch": "As senhas não são iguais",
+  "male": "Masculino",
+  "female": "Feminino",
+  "otherGender": "Outro (a)",
+  "passwordLengthRule": "A senha deve ter ao menos 8 caracteres de comprimento",
+  "passwordSpecialCharacterRule": "A senha deve ter ao menos um caracter especial",
+  "doNotHaveAccount": "Não tem uma conta?",
+  "signUp": "Cadastre-se",
+  "signIn": "Entrar",
+  "search": "Pesquisar",
+  "searchPatientHint": "Digite para pesquisar um paciente por CPF, E-mail, Nome ou Número de Celular",
+  "newPatient": "Novo",
+  "agenda": "Agenda",
+  "daily": "Diário",
+  "weakly": "Semanal",
+  "monthly": "Mensal",
+  "to": "até",
+  "filter": "Filtrar"
 }
