Criado modelos de histórico médico, paciente e endereço; Ajeitado pontos na agenda e nos forms; Sendo criado patient_detail_screen.dart; Criado cadastro de paciente;

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -33,7 +33,7 @@
   "signIn": "Sign In",
   "search": "Search",
   "searchPatientHint": "NINo, E-mail, Name or Phone Number",
-  "newPatient": "New",
+  "newLabel": "New",
   "agenda": "Agenda",
   "daily": "Daily",
   "weakly": "Weakly",
@@ -43,5 +43,25 @@
   "patientList": "Patients",
   "patientsLabel": "patients",
   "sortBy": "Sort by",
-  "basicInfo": "Basic Information"
+  "basicInfo": "Basic Information",
+  "doctorsList": "Doctors",
+  "doctorsLabel": "doctors",
+  "medicalRecord": "Medical Record",
+  "hasDiabetes": "Has Diabetes",
+  "hasHypertension": "Has Hypertension",
+  "hasHeartProblems":  "Has HeartProblems",
+  "hasEpilepsy": "Has Epilepsy",
+  "hasAsthma": "Has Asthma",
+  "hasOsteoporosis": "Has Osteoporosis",
+  "allergies":  "Allergies",
+  "medications": "Medications",
+  "surgeries":  "Surgeries",
+  "hasAnestheticAllergy": "Has AnestheticAllergy",
+  "hasBleedingIssues": "Has BleedingIssues",
+  "isPregnant": "Is Pregnant",
+  "pregnancyMonth":  "Pregnancy Month",
+  "newPatient": "New Patient",
+  "register": "Register",
+  "yes": "Yes",
+  "no": "No"
 }
