--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -33,7 +33,7 @@
   "signIn": "Entrar",
   "search": "Pesquisar",
   "searchPatientHint": "NIF, E-mail, Nome ou Telemóvel",
-  "newPatient": "Novo",
+  "newLabel": "Novo",
   "agenda": "Agenda",
   "daily": "Diário",
   "weakly": "Semanal",
@@ -43,5 +43,25 @@
   "patientList": "Pacientes",
   "patientsLabel": "pacientes",
   "sortBy": "Ordenar por",
-  "basicInfo": "Informações Básicas"
+  "basicInfo": "Informações Básicas",
+  "doctorsList": "Médicos",
+  "doctorsLabel": "médicos",
+  "medicalRecord": "Registro Médico",
+  "hasDiabetes": "Tem diabetes?",
+  "hasHypertension": "Tem hipertensão?",
+  "hasHeartProblems":  "Tem problemas cardíacos?",
+  "hasEpilepsy": "Tem epilepsia?",
+  "hasAsthma": "Tem asma?",
+  "hasOsteoporosis": "Tem osteoporose?",
+  "allergies":  "Alergias",
+  "medications": "Medicamentos",
+  "surgeries":  "Cirurgias",
+  "hasAnestheticAllergy": "Tem alergia a anestésicos?",
+  "hasBleedingIssues": "Tem problemas de sangramento?",
+  "isPregnant": "Está grávida?",
+  "pregnancyMonth":  "Mês da gravidez?",
+  "newPatient": "Novo Paciente",
+  "register": "Cadastrar",
+  "yes": "Sim",
+  "no": "Não"
 }
