--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -72,7 +72,12 @@
   "no": "No",
   "okay": "Okay",
   "cancel": "Cancel",
-  "newConsultation": "New Consultation",
+  "newAppointment": "New Appointment",
+  "datesAndTimes": "Dates and Times",
+  "addDate": "Add Date",
+  "procedures": "Procedures",
+  "appointmentType": "Appointment Type",
+  "teeth": "Teeth",
   "thePatientRequestedAnConsultation": "The patient {name} requested an consultation, confirm?",
   "patientCreatedSuccessfully": "Patient created successfully",
   "patientCreatedByClinicSuccessfully": "Patient created by clinic successfully",
