--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -72,7 +72,12 @@
   "no": "Não",
   "okay": "Ok",
   "cancel": "Cancelar",
-  "newConsultation": "Nova Consulta",
+  "newAppointment": "Nova Consulta",
+  "datesAndTimes": "Datas e horários",
+  "addDate": "Adicionar Data",
+  "procedures": "Procedimentos",
+  "appointmentType": "Tipo de consulta",
+  "teeth": "Dentes",
   "thePatientRequestedAnConsultation": "O paciente {name} solicitou uma consulta, confirmar?",
   "patientCreatedSuccessfully": "Paciente criado com sucesso",
   "patientCreatedByClinicSuccessfully": "Paciente criado pela clínica com sucesso",
