Adicionado coisas no SideBarBloc; Criado SignUpBloc; Criado NewPatientModal; Criado SimpleResponse; Criado AuthBloc e AuthRefresh; Renomeado doctor para dentist;

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,7 +7,7 @@
   "street": "Street",
   "number": "Number",
   "complement": "Complement",
-  "district": "District",
+  "neighborhood": "Neighborhood",
   "city": "City",
   "state": "State",
   "zipCode": "Zip Code",
@@ -63,7 +63,9 @@
   "isPregnant": "Is Pregnant",
   "pregnancyMonth":  "Pregnancy Month",
   "newPatient": "New Patient",
+  "updatePatient": "Update Patient",
   "register": "Register",
+  "update": "Update",
   "edit": "Edit",
   "dateLabel": "Date",
   "beginTimeLabel": "Begin",
@@ -72,12 +74,18 @@
   "no": "No",
   "okay": "Okay",
   "cancel": "Cancel",
+  "next": "Next",
   "newAppointment": "New Appointment",
   "datesAndTimes": "Dates and Times",
   "addDate": "Add Date",
   "procedures": "Procedures",
   "appointmentType": "Appointment Type",
   "teeth": "Teeth",
+  "basicInformation": "Basic Information",
+  "address": "Address",
+  "personalInformation": "Personal Information",
+  "brazil": "Brazil",
+  "portugal": "Portugal",
   "thePatientRequestedAnConsultation": "The patient {name} requested an consultation, confirm?",
   "patientCreatedSuccessfully": "Patient created successfully",
   "patientCreatedByClinicSuccessfully": "Patient created by clinic successfully",
