--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -7,7 +7,7 @@
   "street": "Rua",
   "number": "Número",
   "complement": "Complemento",
-  "district": "Distrito",
+  "neighborhood": "Distrito",
   "city": "Cidade",
   "state": "Região",
   "zipCode": "Código Postal",
@@ -17,7 +17,7 @@
   "phoneNumber": "Telemóvel",
   "healthNumber": "Eteunte",
   "documentNumber": "NIF",
-  "documentNumberExpirationDate": "Data de Validade do NIF",
+  "nationalRegistry": "Cartão Nacional de Identidade",
   "occupation": "Ocupação",
   "isMandatory": "é obrigatório",
   "quantity": "{count, plural, =0 {Zero} =1 {Um} other {Mais de um }}",
@@ -63,7 +63,9 @@
   "isPregnant": "Está grávida?",
   "pregnancyMonth":  "Mês da gravidez?",
   "newPatient": "Novo Paciente",
+  "updatePatient": "Atualizar Paciente",
   "register": "Cadastrar",
+  "update": "Atualizar",
   "edit": "Editar",
   "dateLabel": "Data",
   "beginTimeLabel": "Início",
@@ -72,12 +74,18 @@
   "no": "Não",
   "okay": "Ok",
   "cancel": "Cancelar",
+  "next": "Próximo",
   "newAppointment": "Nova Consulta",
   "datesAndTimes": "Datas e horários",
   "addDate": "Adicionar Data",
   "procedures": "Procedimentos",
   "appointmentType": "Tipo de consulta",
   "teeth": "Dentes",
+  "basicInformation": "Informações Básicas",
+  "address": "Endereço",
+  "personalInformation": "Informações Pessoais",
+  "brazil": "Brasil",
+  "portugal": "Portugal",
   "thePatientRequestedAnConsultation": "O paciente {name} solicitou uma consulta, confirmar?",
   "patientCreatedSuccessfully": "Paciente criado com sucesso",
   "patientCreatedByClinicSuccessfully": "Paciente criado pela clínica com sucesso",
