Adicionado endpoints no api_client.dart; traduções; Criado quadro kanban;

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -86,22 +86,28 @@
   "personalInformation": "Personal Information",
   "brazil": "Brazil",
   "portugal": "Portugal",
-  "thePatientRequestedAnConsultation": "The patient {name} requested an consultation, confirm?",
+  "thePatientRequestedAnAppointment": "The patient {name} requested an appointment, confirm?",
   "patientCreatedSuccessfully": "Patient created successfully",
   "patientCreatedByClinicSuccessfully": "Patient created by clinic successfully",
   "patientUpdatedSuccessfully": "Patient updated successfully",
   "patientUpdatedByClinicSuccessfully": "Patient updated by clinic successfully",
-  "consultationScheduledSuccessfully": "Consultation scheduled successfully",
-  "consultationUpdatedSuccessfully": "Consultation updated successfully",
-  "consultationDeletedSuccessfully": "Consultation deleted successfully",
-  "consultationConfirmedSuccessfully": "Consultation confirmed successfully",
+  "appointmentScheduledSuccessfully": "Appointment scheduled successfully",
+  "appointmentUpdatedSuccessfully": "Appointment updated successfully",
+  "appointmentDeletedSuccessfully": "Appointment deleted successfully",
+  "appointmentConfirmedSuccessfully": "Appointment confirmed successfully",
   "patientNotFoundException": "Patient not found",
   "patientUniqueEmailException": "Patient already exists with this email",
   "patientUniqueDocumentNumberException": "Patient already exists with this document number",
   "patientNotBelongToClinicException": "Patient not belongs to clinic",
-  "youAlreadyHaveAScheduledConsultationException": "You already have a scheduled consultation",
+  "youAlreadyHaveAScheduledAppointmentException": "You already have a scheduled appointment",
   "patientAlreadyInClinicException": "Patient already in clinic, cannot be updated",
   "doctorNotBelongToClinicException": "Doctor not belongs to clinic",
-  "consultationAlreadyIsFinishedException": "Consultation already is finished, cannot be updated or deleted",
-  "consultationIsCancelledException": "Consultation is cancelled, cannot be updated or deleted"
+  "appointmentAlreadyIsFinishedException": "Appointment already is finished, cannot be updated or deleted",
+  "appointmentIsCancelledException": "Appointment is cancelled, cannot be updated or deleted",
+  "emailOrPasswordIsIncorrectException":  "Email or password is incorrect",
+  "accountIsLockedException": "Account is locked",
+  "youAreNotAuthorizedToThisResourceException":  "You are not authorized to this resource",
+  "sessionNonValidException": "Session non valid",
+  "sessionExpiredException":  "Session expired",
+  "unknownErrorException": "Unknown error"
 }
