--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -85,22 +85,28 @@
   "personalInformation": "Informações Pessoais",
   "brazil": "Brasil",
   "portugal": "Portugal",
-  "thePatientRequestedAnConsultation": "O paciente {name} solicitou uma consulta, confirmar?",
+  "thePatientRequestedAnAppointment": "O paciente {name} solicitou uma consulta, confirmar?",
   "patientCreatedSuccessfully": "Paciente criado com sucesso",
   "patientCreatedByClinicSuccessfully": "Paciente criado pela clínica com sucesso",
   "patientUpdatedSuccessfully":  "Paciente atualizado com sucesso",
   "patientUpdatedByClinicSuccessfully": "Paciente atualizado pela clínica com sucesso",
-  "consultationScheduledSuccessfully": "Consulta agendada com sucesso",
-  "consultationUpdatedSuccessfully": "Consulta atualizada com sucesso",
-  "consultationDeletedSuccessfully": "Consulta deletada com sucesso",
-  "consultationConfirmedSuccessfully": "Consulta confirmada com sucesso",
+  "appointmentScheduledSuccessfully": "Consulta agendada com sucesso",
+  "appointmentUpdatedSuccessfully": "Consulta atualizada com sucesso",
+  "appointmentDeletedSuccessfully": "Consulta deletada com sucesso",
+  "appointmentConfirmedSuccessfully": "Consulta confirmada com sucesso",
   "patientNotFoundException": "Paciente não encontrado",
   "patientUniqueEmailException": "Paciente já existe com este email",
   "patientUniqueDocumentNumberException": "Paciente já existe com este NIF",
   "patientNotBelongToClinicException": "Paciente não pertence à clínica",
-  "youAlreadyHaveAScheduledConsultationException": "Você já tem uma consulta agendada",
+  "youAlreadyHaveAScheduledAppointmentException": "Você já tem uma consulta agendada",
   "patientAlreadyInClinicException": "Paciente já está na clínica, não pode ser atualizado",
   "doctorNotBelongToClinicException": "Médico não pertence à clínica",
-  "consultationAlreadyIsFinishedException": "Consulta já está finalizada, não pode ser atualizado ou deletado",
-  "consultationIsCancelledException": "Consulta está cancelada, não pode ser atualizado ou deletado"
+  "appointmentAlreadyIsFinishedException": "Consulta já está finalizada, não pode ser atualizado ou deletado",
+  "appointmentIsCancelledException": "Consulta está cancelada, não pode ser atualizado ou deletado",
+  "emailOrPasswordIsIncorrectException":  "Email ou senha incorretos",
+  "accountIsLockedException": "Conta bloqueada",
+  "youAreNotAuthorizedToThisResourceException":  "Você não está autorizado a acessar este recurso",
+  "sessionNonValidException": "Sessão não válida",
+  "sessionExpiredException":  "Sessão expirada",
+  "unknownErrorException": "Erro desconhecido"
 }
