Criado quadro kanban

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -84,8 +84,37 @@
   "basicInformation": "Basic Information",
   "address": "Address",
   "personalInformation": "Personal Information",
+  "add": "Add",
+  "delete": "Delete",
+  "confirm": "Confirm",
+
   "brazil": "Brazil",
   "portugal": "Portugal",
+
+  "crmColumnAddNewCard": "Add new card",
+  "crmColumnAddNewColumn": "Add new column",
+  "crmColumnDeleteColumn": "Delete column",
+  "crmColumnMoveToRight": "Move to right",
+  "crmColumnMoveToLeft": "Move to left",
+  "crmWhichSideOfColumn": "Add column to which side of the column {columnName}?",
+  "crmLeft": "Left",
+  "crmRight": "Right",
+  "crmToConfirmColumnRemovalType": "To confirm the removal of the column, type \"{columnName}\"",
+  "crmMoveCardsToColumn": "Move cards to column:",
+  "crmTitle": "Title",
+  "crmDescription": "Description",
+  "crmDueDate": "Due Date",
+  "crmName": "Name",
+  "crmEmail": "Email",
+  "crmPhone": "Phone",
+  "crmMessage": "Message",
+  "crmColumn": "Column",
+  "crmCardType": "Card Type",
+  "crmDefaultCardType": "Default",
+  "crmRegisterPatientCardType": "Register Patient",
+  "crmGetInTouchCardType": "Get in touch",
+
+
   "thePatientRequestedAnAppointment": "The patient {name} requested an appointment, confirm?",
   "patientCreatedSuccessfully": "Patient created successfully",
   "patientCreatedByClinicSuccessfully": "Patient created by clinic successfully",
