--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -84,8 +84,36 @@
   "basicInformation": "Informações Básicas",
   "address": "Endereço",
   "personalInformation": "Informações Pessoais",
+  "add": "Adicionar",
+  "delete": "Deletar",
+  "confirm": "Confirmar",
+
   "brazil": "Brasil",
   "portugal": "Portugal",
+
+  "crmColumnAddNewCard": "Adicionar novo cartão",
+  "crmColumnAddNewColumn": "Adicionar nova coluna",
+  "crmColumnDeleteColumn": "Deletar coluna",
+  "crmColumnMoveToRight": "Mover para a direita",
+  "crmColumnMoveToLeft": "Mover para a esquerda",
+  "crmWhichSideOfColumn": "Adicionar coluna à qual lado da coluna {columnName}?",
+  "crmLeft": "Esquerda",
+  "crmRight": "Direita",
+  "crmToConfirmColumnRemovalType": "Para confirmar a remoção da coluna, digite \"{columnName}\"",
+  "crmMoveCardsToColumn": "Mover cartões para a coluna:",
+  "crmTitle": "Título",
+  "crmDescription": "Descrição",
+  "crmDueDate": "Data de vencimento",
+  "crmName": "Nome",
+  "crmEmail": "E-mail",
+  "crmPhone": "Telefone",
+  "crmMessage": "Mensagem",
+  "crmColumn": "Coluna",
+  "crmCardType": "Tipo de cartão",
+  "crmDefaultCardType": "Padrão",
+  "crmRegisterPatientCardType": "Registrar paciente",
+  "crmGetInTouchCardType": "Entrar em contato",
+
   "thePatientRequestedAnAppointment": "O paciente {name} solicitou uma consulta, confirmar?",
   "patientCreatedSuccessfully": "Paciente criado com sucesso",
   "patientCreatedByClinicSuccessfully": "Paciente criado pela clínica com sucesso",
